sd/sdge/guiao1/store/cbcast/20230307T104205.000Z/node-logs/n2.log
  File "/home/miguel/uni/4ano/sd/sdge/guiao1/wrong-causal-broadcast.py", line 19
    match msg.body.type:
          ^
SyntaxError: invalid syntax
